Revert "Streamline Xenon configuration reading"
This reverts commit cc229126bb1e8564d309de6015f3ebfd51c6ecf3.

Change-Id: I47056f38be59bc7ede89c2dbe517f9bf42ae6445